# vulkan-renderer

./: CMakeLists.txt  xmake.lua
.cache/clangd/index/: application.cpp.AAEEDBA53094B98B.idx  application.hpp.7BD0DDA3BF4A4262.idx  bezier_curve.cpp.CC1D33A3F500691D.idx  bezier_curve.hpp.392F529B1A6E55E3.idx  byte_stream.cpp.5691B660B9834D23.idx  byte_stream.hpp.9E603B428F368FEF.idx  camera.cpp.21A649CE0587E11E.idx  camera.hpp.5F4C1D410470B25B.idx  cla_parser.cpp.421BFC211A841BE7.idx  cla_parser.hpp.D2D8AA7A7BAFF143.idx  collision.cpp.D9EEA19E53E07B20.idx  collision.hpp.C9FF619A261FE9A8.idx  collision_query.cpp.E94FAF2570FB7026.idx  collision_query.hpp.848E277245DB5FAF.idx  command_buffer.cpp.F5ED3AA7221CF27C.idx  command_buffer.hpp.3756579F54653B2C.idx  command_pool.cpp.6D26C12E8AD1FE4B.idx  command_pool.hpp.64403602056CA6B7.idx  cpu_texture.cpp.2845A01F1454572B.idx  cpu_texture.hpp.5F1A633A97FCC886.idx  cube.cpp.AA03357DF063656A.idx  cube.hpp.E012428156A29264.idx  descriptor.cpp.6B02E7441360CE11.idx  descriptor.hpp.858B92217771F1F6.idx  descriptor_builder.cpp.A3440C85F44205B1.idx  descriptor_builder.hpp.E500FE33510E44DA.idx  device.cpp.76A034DCD16C1BBF.idx  device.hpp.A3A5F221D5C5F3D2.idx  device_info.cpp.2BFD069941E88693.idx  device_info.hpp.D9734AAFD1772BAB.idx  enumerate.cpp.0F1114B68126E712.idx  enumerate.hpp.ABBE579563510984.idx  exception.cpp.A472181489910AA6.idx  exception.hpp.153CA039EB446173.idx  exception.hpp.463258DEDDAAF7AD.idx  fence.cpp.371AB471BB037EBA.idx  fence.hpp.6E1C9BDBD87F1594.idx  file.cpp.3090003BD4ABD68C.idx  file.hpp.75F15965DF64C281.idx  fps_counter.cpp.C88BE3CB317A8457.idx  (+49 more)
benchmarks/: engine_benchmark_main.cpp
cmake/: conan_setup.cmake
documentation/source/development/reference/: keyboard-mouse-input.rst
example/: CMakeLists.txt
example/src/platform/windows/: win_resource_file.rc.in
include/inexor/vulkan-renderer/: application.hpp  meta.hpp.in  renderer.hpp
src/: CMakeLists.txt
src/vulkan-renderer/: application.cpp  renderer.cpp
src/vulkan-renderer/world/: collision_query.cpp
src/vulkan-renderer/wrapper/: glfw_context.cpp  window.cpp
tests/: unit_tests_main.cpp
